--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 1.11
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn package
 
       - name: Setup node
         uses: actions/setup-node@v1.1.0
