--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         run: cd ui && npm install && npm run build
 
       - name: GitHub Action for Heroku
-        uses: actions/heroku@1.0.0
+        uses: actions/heroku@master
 
       - name: login
         uses: actions/heroku@master
